Solved jittery animation on Safari by foregoing position: sticky and using ScrollMagic.

--- a/assets/css/partials/_matt.scss
+++ b/assets/css/partials/_matt.scss
@@ -170,9 +170,9 @@ body {
 
 #people,
 #rays {
-  -webkit-transform: scale(0.5);
-  -moz-transform: scale(0.5);
-  transform: scale(0.5); 
+  -webkit-transform: scale(0.35);
+  -moz-transform: scale(0.35);
+  transform: scale(0.35); 
   top: 0px;
 }
 
@@ -203,7 +203,7 @@ body {
   -webkit-transform: scale(1.5) !important;
   -moz-transform: scale(1.5) !important;
   transform: scale(1.5) !important;
-  opacity: 0;
+  opacity: 0;   
 }
 
 .first-pieces,
@@ -373,7 +373,7 @@ body {
   }
 }
 
-@media(max-width: 500px) {
+@media(max-width: 500px) { 
   .validation-container {
     padding: 0 2rem;
   }
@@ -381,25 +381,25 @@ body {
     padding-top: 1rem;
   }
   .title-text h1 {
-    font-size: 1.5em;
-    line-height: 1.5em;
+    font-size: 1.25em;
+    line-height: 1.25em;
   }
   .body-text span > span {
-    font-size: 14px;
+    font-size: 1em;
   }
   .divider {
     margin: .75rem 0;
   }
   .body-text h3 {
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 24px;
+    line-height: 32px;
   }
   #text-set-01 {
     padding-top: 80px;
   }
   #text-set-01 h6, 
   .body-text h6 {
-    font-size: 10px;
+    font-size: 14px;
     letter-spacing: 2px;
   }
   .body-text span > span::after {
@@ -408,10 +408,22 @@ body {
   .body-text h3:nth-child(3) {
     margin-bottom: .75rem;
   }
+  
+  .image-wrapper img {   
+    top: 50%;
+    clip: rect(0, 100vw, 100vw, 100%);
+  }
+
+  .scale-pieces-up {
+    -webkit-transform: scale(1.15) !important;
+    -moz-transform: scale(1.15) !important;
+    transform: scale(1.15) !important;
+    opacity: 0;   
+  }
 }
 
 #text-set-02,
 #text-set-03,
 #text-set-04 { 
-  margin-top: 100%;
+  margin-top: 100vh;
 }
